# triton-example

./: Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  base.Dockerfile  triton.Dockerfile
models_storage/clf/: config.pbtxt
models_storage/linreg/: config.pbtxt
models_storage/linreg/1/: model.onnx
models_storage/mnist/: config.pbtxt
server/: api.py  deps.py  main.py  metrics.py  triton.py
