[tool.poetry]
name = "server"
version = "0.1.0"
description = "Triton Example"
authors = ["nemexur <sleep3r@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.4"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
loguru = "^0.6.0"
prometheus-client = "^0.15.0"
redis = {extras = ["hiredis"], version = "^4.3.4"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
tritonclient = {extras = ["all"], version = "^2.26.0"}

[tool.poetry.group.dev.dependencies]
torch = "^1.12.1"
onnx = "^1.12.0"
onnxruntime = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"