[tool.poetry]
name = "server"
version = "0.1.0"
description = "Triton Example"
authors = ["sleep3r <sleep3r@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12.1"
numpy = "^1.23.4"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
loguru = "^0.6.0"
prometheus-client = "^0.15.0"
redis = {extras = ["hiredis"], version = "^4.3.4"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
tritonclient = {extras = ["all"], version = "^2.36.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"